# arista-vtep-update

./: AGENTS.md  README.md  pyproject.toml  update_vtep.py
arista_vtep_update/: __init__.py
tests/: test_update_vtep.py
